DontExpiReBack/src/main/java/org/example/error/InvalidCredentialsException.java
package org.example.error;

public class InvalidCredentialsException extends RuntimeException {
    public InvalidCredentialsException(String message) {
        super(message);
    }
}